--- a/static/view/home.html
+++ b/static/view/home.html
@@ -111,6 +111,8 @@
           return;
         }
 
+        data = JSON.parse(data)
+
         var dlHost = 'http://localhost:8080';
         var dlEntry = localStorage.getItem('downloadEntry');
         if (dlEntry != '') {
