--- a/static/view/upload.html
+++ b/static/view/upload.html
@@ -57,14 +57,15 @@
 
   function onUpload() {
     var upUrl = "/file/upload?" + queryParams();
-    var upEntry = localStorage.getItem("uploadEntry");
-    if (upEntry != "" ) {
-      if (upEntry.indexOf("http:")>=0) {
-        upUrl = upEntry + "/file/upload?" + queryParams();
-      } else {
-        upUrl = "http://" + upEntry + "/file/upload?" + queryParams();
-      }
-    }
+    // var upEntry = localStorage.getItem("uploadEntry");
+    // if (upEntry != "" ) {
+    //   if (upEntry.indexOf("http:")>=0) {
+    //     upUrl = upEntry + "/file/upload?" + queryParams();
+    //   } else {
+    //     upUrl = "http://" + upEntry + "/file/upload?" + queryParams();
+    //   }
+    // }
+    var upUrl = "http://localhost:8080/file/upload?" + queryParams();
     $.ajax({
       url: upUrl,
       type: 'POST',
@@ -73,11 +74,13 @@
       processData: false,
       contentType: false,
       error: function (err) {
+        console.log("err",err)
         alert('请求报错信息: ' + JSON.stringify(err));
       },
       success: function (res) {
-        alert('请求返回结果: ' + JSON.stringify(res));
-        if (res.code == 0) {
+        console.log(res)
+        const code = JSON.parse(res).code
+        if (code == 0) {
           window.location.href = "/static/view/home.html";
         }
       }
